Change grid to right-aligned, and fix navigation for about and projects buttons.

--- a/frontend/src/app/components/IsotopeGrid.module.css
+++ b/frontend/src/app/components/IsotopeGrid.module.css
@@ -2,13 +2,14 @@
   width: 100%;
   max-width: 100rem; /* max-w-6xl = 72rem */
   margin-left: auto;
+  margin-right: 2.5rem;
   min-height: 31.25rem; /* 500px = 31.25rem */
 }
 
 .gridItem {
   width: 30%;
   right: 0;
-  padding-right: 0rem;
+  padding-left: 0rem;
 }
 
 .gridItem img {
@@ -44,13 +45,14 @@
 .gridItem.expanded.featured {
   display: block;
   width: 100%;
+  max-width: none;
 }
 
-.gridItem.expandedRight {
+.gridItem.expandedLeft {
   position: fixed;
-  margin-left: auto !important;
+  right: auto !important;
 }
-.expanded .imageContainer {
+.expanded .imageContainer img {
   box-shadow: 0 0 25px var(--accent-color);
 }
 
@@ -66,10 +68,6 @@
   position: relative;
 }
 
-.gridItemInnerContainer {
-  right: 0;
-}
-
 /* Responsive adjustments */
 @media (max-width: 1024px) {
   .gridSizer {
@@ -77,7 +75,7 @@
   }
   .gridItem {
     width: calc(50%);
-    padding-left: 1rem !important;
+    padding-right: 1rem !important;
   }
   .gridItem.featured {
     width: 75%;
@@ -88,6 +86,5 @@
   }
   .gridItem.expanded {
     width: 75%;
-    margin-left: 0;
   }
 }
